# tree-sitter-lean

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  COPYING  Cargo.toml  LICENSE  Makefile  README.md  README.rst  binding.gyp  grammar.js  index.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tree-sitter.json
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  regenerate.yml  zizmor.yml
bindings/c/: tree-sitter-lean.h  tree-sitter-lean.pc.in
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_lean/: __init__.py  __init__.pyi  binding.c
bindings/python/tree_sitter_lean/tests/: test_binding.py
bindings/rust/: build.rs  lib.rs
grammar/: attr.js  basic.js  command.js  do.js  helpers.js  mathlib.js  syntax.js  tactic.js  term.js  util.js
queries/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
test/: todo.txt
test/corpus/: commands.txt  comments.txt  declarations.txt  definitions.txt  do.txt  expressions.txt  literals.txt  mathlib.txt  module.txt  notation.txt  organization.txt  strings.txt  syntax-extras.txt  syntax.txt  tactics.txt  terms.txt
