[package]
name = "tree-sitter-lean"
description = "Rust bindings for a tree-sitter grammar for the Lean theorem prover"
version = "0.1.0"
authors = ["Julian Berman <Julian+tree-sitter-lean@GrayVines.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "lean"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/Julian/tree-sitter-lean"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
